Is 14 other jump functions (#6)
Implement functionality to extend [- and ]- actions

next or prev expressions or declaration statements
next or prev loops
next of prev if-s
my own [-f
next or prev operator with [-o
replace skipFirstNode with an enum instead of boolean
implement finding types of elements by finding among children only, or among parents only (use WhileSearch enum, replace its functionality), add an option not to search in the selected area
A-S-r should do the inverted A-r
find the next body of something ({})
find the next function call
find the next expression
left and right side of =
struct and class
templates
change ]-c to ]-fc
implement finding next or prev comments
virtual std::tuple<double, double, double, bool> requestStepSizes() = 0; should also work with [-ff
macros
std::vector v{1, 2}; How can I reach 1 and 2?
includes and imports